fix shifting position of bitrate when playing a stream

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -241,10 +241,6 @@ svg {
   transition: background-color var(--animate-500, 500ms) linear;
 }
 
-#stations>li[playing]>div {
-  margin-right: 38px;
-}
-
 #stations>li[playing][selected]>div {
   background: var(--main-color);
   color: var(--text-color);
@@ -271,7 +267,9 @@ svg {
 }
 
 #stations>li[playing]>.play {
-  display: none;
+  opacity:0;
+  pointer-events: none;
+  cursor: auto;
 }
 
 #stations>li[selected]>.remove {
